# Gim

./: .anjuta_sym_db.db  .bmake-0.3  .gkmake_conf  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  Possible_Lex_C  Processors_list.xlsx  README.md  TODO.tasks  config.h  config.status  configure  configure.ac  configure.ac.bak  data.gkp  description-pak  includegimbmake.h
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
db/: data_insert.gkdbs  gdbs_command_structure  gdbs_test.cc  sensori_tab_Lex_A.conf  valtemp_db.gkdbs  valtemp_db_Lex_A.conf
documentation/: Doxyfile  Makefile  Makefile.am  Makefile.in  alias.conf  gim_footer.html  gim_header_dg.html  gkfp.cc  make_doc.sh
documentation/html/: Info.plist  Makefile  Nodes.xml  Tokens.xml  a00044.html  a00044_source.html  a00045.map  a00045.md5  a00046.map  a00046.md5  a00047.html  a00047_source.html  a00049.map  a00049.md5  a00050.html  a00050_source.html  a00051.map  a00051.md5  (+9758 more)
gim_gkdp/: Makefile  Makefile.am  Makefile.in  gkdp  gkdp.cc
gim_gkfp/: Makefile  Makefile.am  Makefile.in  gkfp  gkfp.cc
gim_shell/: Makefile  Makefile.am  Makefile.in  gim_sh_callback.cc  gim_sh_callback.h  gim_sh_commands.cc  gim_sh_commands.h  gim_sh_environ_obj.cc  gim_sh_environ_obj.h  gim_sh_mainloop.cc  gim_shell.h  gimshell  main.cc
gim_shell/.deps/: gimshell-gim_sh_callback.Po  gimshell-gim_sh_commands.Po  gimshell-gim_sh_environ_obj.Po  gimshell-gim_sh_mainloop.Po  gimshell-gimstat.Po  gimshell-main.Po
gim_stat/: Makefile  Makefile.am  Makefile.in  gimstat  gimstat.cc
gimclassgen/: Makefile.am  Makefile.in  gcg_main_header.h  main.cc
gkmake/: Makefile  Makefile.am  Makefile.in  bmake_heder.cc  bmake_main.h  gkm_header.cc  gkmake  main.cc
include/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  gim.h  gim.h~  gim_ascii_buffer.h  gim_bmake.h  gim_checksum.h  gim_checksum.h~  gim_compression.h  gim_compression.h~  gim_custom_type.h  gim_custom_type.h~  gim_db.h  gim_db_structures.h  gim_define.h  gim_directory.h  gim_doxygen.h  gim_environment.h  gim_error.h  gim_file.h  gim_getopt.h  gim_gkl.h  gim_gkl_commands.h  gim_gkl_custom_types.h  gim_gkl_variable.h  gim_gkmake.h  gim_gkp_cryptography.h  gim_gkp_file_data.h  gim_gkp_file_list.h  gim_gkp_password.h  gim_gkp_utils.h  gim_html.h  gim_identity.h  gim_kvalue.h  gim_lexical.h  gim_list.h  gim_list.h~  gim_log.h  (+14 more)
pool/: gim_bz2_bzlib.h  gim_bz2_bzlib_private.h  gim_bz2_crctable.cc  gim_bz2_decompress.cc  gim_bz2_huffman.cc  gim_compression.cc  gim_compression.h  gim_lzh.h  gim_lzh_compress.cc
src/: .bmake-0.3  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  gim.cc  gim_ascii_buffer.cc  gim_bz2_blocksort.cc  gim_bz2_compress.cc  gim_bz2_compress_bzlib.cc  gim_bz2_randtable.cc  gim_checksum.cc  gim_checksum.cc~  gim_cnc_coding.cc  gim_cnc_generic.cc  gim_compression.cc  gim_db.cc  gim_directory.cc  gim_directory.cc~  gim_environment.cc  gim_error.cc  gim_file.cc  gim_getopt.cc  gim_gkfp_file_list.cc  gim_gkfp_header.cc  gim_gkl.cc  gim_gkl_commands.cc  gim_gkl_variable.cc  gim_gkp_cryptography.cc  gim_gkp_file_data.cc  gim_gkp_file_list.cc  gim_gkp_password.cc  gim_gkp_password.cc~  gim_gkp_utils.cc  gim_html.cc  gim_identity.cc  gim_interface.cc  gim_kvalue.cc  gim_lexical.cc  gim_list.cc  (+13 more)
src/.deps/: libgim_a-gim.Po  libgim_a-gim_ascii_buffer.Po  libgim_a-gim_bz2_blocksort.Po  libgim_a-gim_bz2_bzlib.Po  libgim_a-gim_bz2_compress.Po  libgim_a-gim_bz2_compress_bzlib.Po  libgim_a-gim_bz2_crctable.Po  libgim_a-gim_bz2_decompress.Po  libgim_a-gim_bz2_huffman.Po  libgim_a-gim_bz2_randtable.Po  libgim_a-gim_checksum.Po  libgim_a-gim_cnc.Po  libgim_a-gim_cnc_alfabeto.Po  libgim_a-gim_cnc_coding.Po  libgim_a-gim_cnc_generic.Po  libgim_a-gim_compression.Po  libgim_a-gim_db.Po  libgim_a-gim_directory.Po  libgim_a-gim_enhanced.Po  libgim_a-gim_environment.Po  libgim_a-gim_error.Po  libgim_a-gim_file.Po  libgim_a-gim_getopt.Po  libgim_a-gim_gkfp_file_data.Po  libgim_a-gim_gkfp_file_list.Po  libgim_a-gim_gkfp_header.Po  libgim_a-gim_gkl.Po  libgim_a-gim_gkl_commands.Po  libgim_a-gim_gkl_variable.Po  libgim_a-gim_gkp.Po  libgim_a-gim_gkp_cryptography.Po  libgim_a-gim_gkp_file_data.Po  libgim_a-gim_gkp_file_list.Po  libgim_a-gim_gkp_header.Po  libgim_a-gim_gkp_password.Po  libgim_a-gim_gkp_utils.Po  libgim_a-gim_html.Po  libgim_a-gim_identity.Po  libgim_a-gim_interface.Po  libgim_a-gim_kvalue.Po  (+15 more)
(+58 files in other folders)
