dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(gim, 2.7-1, 0)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_RANLIB





AC_OUTPUT([
Makefile
documentation/Makefile
gim_stat/Makefile
gkmake/Makefile
gim_gkdp/Makefile
gim_gkfp/Makefile
gim_shell/Makefile
include/Makefile
src/Makefile
])
