
bin_PROGRAMS = \
	gimshell

gimshell_SOURCES = \
	gim_sh_callback.cc\
	gim_sh_callback.h \
	gim_sh_commands.cc \
	gim_sh_commands.h \
	gim_shell.h \
	gim_sh_environ_obj.cc \
	gim_sh_environ_obj.h \
	gim_sh_mainloop.cc \
	main.cc

gimshell_LDADD = \
	-lgim

gimshell_CXXFLAGS = \
	-O3 \
	-w \
	-L../src/

## File created by the gnome-build tools

