
EXTRA_DIST = \
	$(libgim_include_DATA)\
	$(libgim_include_HEADERS)

libgim_include_HEADERS = \
	gim.h           \
	gim_base_header.h           \
	gim_bmake.h           \
	gim_bz2_bzlib.h           \
	gim_bz2_bzlib_private.h           \
	gim_checksum.h           \
	gim_cnc.h           \
	gim_cnc_coding.h           \
	gim_compression.h           \
	gim_custom_type.h           \
	gim_db.h           \
	gim_db_structures.h           \
	gim_define.h           \
	gim_directory.h           \
	gim_doxygen.h           \
	gim_environment.h           \
	gim_error.h           \
	gim_file.h           \
	gim_gkl.h           \
	gim_gkl_commands.h           \
	gim_gkl_custom_types.h           \
	gim_gkl_variable.h           \
	gim_gkp_cryptography.h           \
	gim_gkp_file_data.h           \
	gim_gkp_file_list.h           \
	gim_gkp_header.h           \
	gim_gkp_password.h           \
	gim_gkp_utils.h           \
	gim_html.h           \
	gim_identity.h           \
	gim_interface.h           \
	gim_kvalue.h           \
	gim_lexical.h           \
	gim_log.h           \
	gim_lzh.h           \
	gim_md5.h           \
	gim_md5global.h           \
	gim_memory.h           \
	gim_mersennetwister.h           \
	gim_private_key.h           \
	gim_prsr.h           \
	gim_sha1.h           \
	gim_sha256.h           \
	gim_sha512.h           \
	gim_signal.h           \
	gim_string.h           \
	gim_time.h           \
	gim_version.h           \
	gim_list.h

libgim_includedir = \
	$(pkgincludedir)

## File created by the gnome-build tools

