## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LIBRARIES = \
	libgim.a

libgim_a_SOURCES = \
	gim.cc    \
	gim_bz2_blocksort.cc    \
	gim_bz2_bzlib.cc    \
	gim_bz2_compress.cc    \
	gim_bz2_compress_bzlib.cc    \
	gim_bz2_crctable.cc    \
	gim_bz2_decompress.cc    \
	gim_bz2_huffman.cc    \
	gim_bz2_randtable.cc    \
	gim_checksum.cc    \
	gim_cnc.cc    \
	gim_cnc_alfabeto.cc    \
	gim_cnc_coding.cc    \
	gim_cnc_generic.cc    \
	gim_compression.cc    \
	gim_db.cc    \
	gim_directory.cc    \
	gim_enhanced.cc    \
	gim_environment.cc    \
	gim_error.cc    \
	gim_file.cc    \
	gim_gkfp_file_data.cc    \
	gim_gkfp_file_list.cc    \
	gim_gkfp_header.cc    \
	gim_gkl.cc    \
	gim_gkl_commands.cc    \
	gim_gkl_variable.cc    \
	gim_gkp.cc    \
	gim_gkp_cryptography.cc    \
	gim_gkp_file_data.cc    \
	gim_gkp_file_list.cc    \
	gim_gkp_header.cc    \
	gim_gkp_password.cc    \
	gim_gkp_utils.cc    \
	gim_html.cc    \
	gim_identity.cc    \
	gim_interface.cc    \
	gim_kvalue.cc    \
	gim_lexical.cc    \
	gim_log.cc    \
	gim_lzh_compress.cc    \
	gim_md5.cc    \
	gim_memory.cc    \
	gim_private_key.cc    \
	gim_sha1.cc    \
	gim_sha256.cc    \
	gim_sha512.cc    \
	gim_signal.cc    \
	gim_string.cc    \
	gim_time.cc    \
	gim_version.cc    \
	gim_list.cc    \
	gim_picgim.cc    \
	gim_getopt.cc    \
	gim_ascii_buffer.cc

libgim_a_CXXFLAGS = \
	-O3 \
	-w

